Feature/view with topic info (#38)
* update `/view` in swagger, return with topic info in `view.js`

* align with compose.js for parameter types
